<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/relative_layout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/gallery_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:layout_below="@+id/relative_layout_1"
        android:weightSum="100">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:paddingTop="30dp"
                    android:paddingLeft="20dp"
                    android:src="@drawable/ic_circle_frame">

                </ImageView>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_layout_1"
                android:layout_width="match_parent"
                android:gravity="right"
                android:layout_height="wrap_content"
                >
                

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="147dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="50dp"

                        android:text="@string/profile_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />


                </LinearLayout>

                <ImageButton
                    android:id="@+id/heart_follow"
                    android:layout_width="61dp"
                    android:layout_height="58dp"
                    android:layout_marginTop="42dp"
                    android:layout_toTheRightOf="@+id/profile_name"
                    android:background="@android:color/white"
                    android:contentDescription="@string/heart"
                    android:src="@drawable/ic_heart_empty" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:gravity="right"
                android:orientation="vertical"
                android:layout_below="@+id/linear_layout_1"
                android:layout_height="wrap_content">


            </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </LinearLayout>

            <TextView
                android:id="@+id/user_profile_bio"
                android:layout_width="365dp"
                android:layout_height="118dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="258dp"
                android:text="@string/bio_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />





        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pet_icon"
                android:layout_width="30dp"
                android:layout_height="22dp"
                android:contentDescription="@string/icon_of_pet_type"
                app:srcCompat="@drawable/cat_icon"
                />

            <TextView
                android:id="@+id/owner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_owner"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profile_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="60dp"
                    android:text="@string/number_of_followers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    />

                <TextView
                    android:id="@+id/profile_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="60dp"
                    android:text="@string/number_of_following"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    />
            </LinearLayout>







        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/pics_videos_tab"
            android:layout_gravity="center"
            android:layout_width="383dp"
            android:layout_height="39dp"
            >

            <com.google.android.material.tabs.TabItem
                android:id="@+id/pics_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_images" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/video_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_videos" />

        </com.google.android.material.tabs.TabLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gallery_gridView"
            android:numColumns="5"
            android:layout_width="match_parent"
            android:verticalSpacing="1dp"
            android:stretchMode="none"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:horizontalSpacing="1dp"
            android:layout_height="0dp"
            android:layout_weight="40">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</RelativeLayout>