<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

    <RelativeLayout
            android:id="@+id/relative_layout_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <LinearLayout
                android:id="@+id/gallery_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:weightSum="100">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:layout_weight="40">

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                    <ImageView
                            android:id="@+id/profile_image"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="30dp"
                            android:src="@drawable/ic_circle_frame">

                    </ImageView>

                    <TextView
                            android:id="@+id/owner_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/pet_owner"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                </LinearLayout>


                <LinearLayout
                        android:id="@+id/linear_layout_1"
                        android:layout_width="match_parent"
                        android:layout_height="104dp"
                        android:gravity="right">


                    <LinearLayout
                            android:layout_width="251dp"
                            android:layout_height="101dp"
                            android:orientation="horizontal">


                        <ImageView
                                android:id="@+id/pet_icon"
                                android:layout_width="36dp"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/icon_of_pet_type"
                                android:paddingTop="30dp"
                                app:srcCompat="@drawable/cat_icon" />

                        <TextView
                                android:id="@+id/profile_name"
                                android:layout_width="147dp"
                                android:layout_height="45dp"
                                android:layout_marginStart="12dp"
                                android:layout_marginTop="50dp"

                                android:text="@string/profile_name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textStyle="bold" />

                        <ImageButton
                                android:id="@+id/heart_follow"
                                android:layout_width="61dp"
                                android:layout_height="58dp"
                                android:layout_marginTop="42dp"
                                android:background="@android:color/white"
                                android:contentDescription="@string/heart"
                                android:src="@drawable/ic_heart_empty" />


                    </LinearLayout>


                </LinearLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="229dp">
                    
                    <TextView
                            android:id="@+id/user_profile_bio"
                            android:layout_width="237dp"
                            android:layout_height="119dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_centerInParent="true"
                            android:layout_marginEnd="9dp"
                            android:layout_marginBottom="9dp"
                            android:text="@string/bio_text"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


                </RelativeLayout>

                <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    android:layout_height="100dp"
                    android:layout_weight="40">


                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                    </LinearLayout>
                </RelativeLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="318dp"
                        android:layout_marginBottom="94dp"
                        android:text="Hallåååå">

                </TextView>

            </RelativeLayout>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:paddingBottom="20dp">

                    <TextView
                            android:id="@+id/profile_followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="60dp"
                            android:text="@string/number_of_followers"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                            android:id="@+id/profile_following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="60dp"
                            android:text="@string/number_of_following"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </LinearLayout>


            </RelativeLayout>


            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/pics_videos_tab"
                    android:layout_width="383dp"
                    android:layout_height="39dp"
                    android:layout_gravity="center">

                <com.google.android.material.tabs.TabItem
                        android:id="@+id/pics_tab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_images" />

                <com.google.android.material.tabs.TabItem
                        android:id="@+id/video_tab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_videos" />

            </com.google.android.material.tabs.TabLayout>


            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/gallery_gridView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="40"
                    android:gravity="center"
                    android:horizontalSpacing="1dp"
                    android:numColumns="5"
                    android:stretchMode="none"
                    android:verticalSpacing="1dp">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>